Result and Error cards modified

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -34,7 +34,7 @@
         .result{
             height: 25rem;
             width: 25rem;
-            background: rgb(0 0 0 / 25%);
+            background-color: rgba(17, 25, 40, 0.75);
             border-radius: 16px;
             box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
             backdrop-filter: blur(5px);
