--- a/views/report.ejs
+++ b/views/report.ejs
@@ -34,15 +34,14 @@
         .result{
             height: 25rem;
             width: 25rem;
-            background: rgba(255, 255, 255, 0.2);
+            background-color: rgba(17, 25, 40, 0.75);
             border-radius: 16px;
             box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
             border: 1px solid rgba(255, 255, 255, 0.3);
             display: flex;
             flex-direction: column;
-            /* justify-content: center; */
             align-items: center;
         }
 
